Now urls and adds flasked

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -3,6 +3,12 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
   <h1>Flaskr</h1>
+  <ul>
+    <li><a href="/productspages/add">Add Product</a></li>
+    <li><a href="/productspages/history">Products</a></li>
+    <li><a href="/importspages/add">Add import</a></li>
+    <li><a href="/exportspages/add">Add Export</a></li>
+  </ul>
 </nav>
 <section class="content">
   <header>
