--- a/flaskr/templates/exportspages/add.html
+++ b/flaskr/templates/exportspages/add.html
@@ -8,7 +8,7 @@
   <form method="post">
     <label for="ide">IDE</label>
     <input type="text" input name="ide" id="ide" required>
-    <label for="count">Count</label>
+    <label for="count">count</label>
     <input type="text" name="count" id="count" required>
     <input type="submit" value="Add">
   </form>
