--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,7 +7,9 @@
     <li><a href="/productspages/add">Add Product</a></li>
     <li><a href="/productspages/history">Products</a></li>
     <li><a href="/importspages/add">Add import</a></li>
+    <li><a href="/importspages/history">Imports</a></li>
     <li><a href="/exportspages/add">Add Export</a></li>
+    <li><a href="/exportspages/history">Exports</a></li>
   </ul>
 </nav>
 <section class="content">
