--- a/flaskr/templates/importspages/history.html
+++ b/flaskr/templates/importspages/history.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block header %}
   <h1>{% block title %}Imports history{% endblock %}</h1>
+  <nav>
+    <form method="post">
+      <label for="ide">IDE</label>
+      <input type="text" input name="ide" id="ide" required>
+      <input type="submit" value="Search">
+    </form>
+  </nav>
 {% endblock %}
 {% block content %}
   {% for import in datahistory %}
