--- a/flaskr/templates/exportspages/history.html
+++ b/flaskr/templates/exportspages/history.html
@@ -15,9 +15,9 @@
         <header>
             <div>
               <h1>{{ export['productName'] }}</h1>
-              <div class="ide">ide: {{export['ide']}}</div>
-              <div class="date">date: {{export['date']}}</div>
-              <div class="count">count: {{export['count']}}</div>
+              <div class="ide">IDE: {{export['ide']}}</div>
+              <div class="date">Creation Date: {{export['date']}}</div>
+              <div class="count">Exported Quantity: {{export['count']}}</div>
               <form action="{{ url_for('exportspages.delt', ide=export['date']) }}" method="post">
                 <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
               </form>
